--- a/fotos/index.html
+++ b/fotos/index.html
@@ -7,9 +7,9 @@
     <meta property="og:site_name" content="Romana MTB">
     <meta name="description" content="Fotos dos eventos da Romana MTB.">
     <title>Fotos | Romana MTB</title>
-    <link rel="stylesheet" href="../src/css/reset.css">
-    <link rel="stylesheet" href="../src/css/romana-mtb.css">
-    <link rel="icon" href="../src/img/romana-mtb/romana-mtb-icon.webp">
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
     <style>
         /* Imagens */
         #content div {
@@ -44,14 +44,14 @@
 </head>
 <body>
     <header>
-        <a href="../"><img src="../src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="../fotos">FOTOS</a></li>
-                <li><a href="../regulamento">REGULAMENTO</a></li>
-                <li><a href="../resultados">RESULTADOS</a></li>
-                <li><a href="../inscricao">INSCRIÇÃO</a></li>
-                <!--<li><a href="../inscricao" target="_blank">INSCRIÇÃO</a></li>-->
+                <li><a href="/fotos">FOTOS</a></li>
+                <li><a href="/regulamento">REGULAMENTO</a></li>
+                <li><a href="/resultados">RESULTADOS</a></li>
+                <!--<li><a href="/inscricao">INSCRIÇÃO</a></li>-->
+                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
             </ul>
         </nav>
     </header>
@@ -74,7 +74,7 @@
                 // Cria um elemento de imagem
                 var img = document.createElement('img');
                 // Src e Alt da imagem
-                img.src = "../src/img/photos/apae-2019/img-" + i.toString().padStart(3, "0") + ".webp";
+                img.src = "/src/img/photos/apae-2019/img-" + i.toString().padStart(3, "0") + ".webp";
                 img.alt = "Foto Trilhão APAE 2019.";
                 // Adiciona a imagem ao div
                 photosContainer.appendChild(img);
@@ -83,7 +83,7 @@
             var photosContainer = document.getElementById('mtb-fest-2023');
             for (let i = 0; i <= 81; i++) {
                 var img = document.createElement('img');
-                img.src = "../src/img/photos/mtb-fest-2023/img-" + i.toString().padStart(3, "0") + ".webp";
+                img.src = "/src/img/photos/mtb-fest-2023/img-" + i.toString().padStart(3, "0") + ".webp";
                 img.alt = "Foto MTB Fest 2023.";
                 photosContainer.appendChild(img);
             }
