--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
     <title>Erro 404 | Romana MTB</title>
-    <link rel="stylesheet" href="../src/css/reset.css">
-    <link rel="stylesheet" href="../src/css/romana-mtb.css">
-    <link rel="icon" href="../src/img/romana-mtb/romana-mtb-icon.webp">
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
     <style>
         #content div {
             top: 250px;
@@ -27,14 +27,14 @@
 </head>
 <body>
     <header>
-        <a href="/"><img src="../src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
                 <li><a href="/fotos">FOTOS</a></li>
                 <li><a href="/regulamento">REGULAMENTO</a></li>
-                <li><a href="/resultados" target="_blank">RESULTADOS</a></li>
-                <li><a href="/inscricao">INSCRIÇÃO</a></li>
-                <!--<li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>-->
+                <li><a href="/resultados">RESULTADOS</a></li>
+                <!--<li><a href="/inscricao">INSCRIÇÃO</a></li>-->
+                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
             </ul>
         </nav>
     </header>
