--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -6,14 +6,17 @@
     <meta name="robots" content="index, nofollow">
     <meta property="og:site_name" content="Romana MTB">
     <meta name="description" content="Faça sua inscrição para o Pedal de Fátima 2024.">
-    <!--<meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e//viewform?usp=sf_link'"/>-->
     <title>Inscrição | Romana MTB</title>
-    <link rel="stylesheet" href="../src/css/reset.css">
-    <link rel="stylesheet" href="../src/css/romana-mtb.css">
-    <link rel="icon" href="../src/img/romana-mtb/romana-mtb-icon.webp">
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
+
+    <!-- Pedal de Sant'Ana 2024 -->
+    <meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSe3VKKr1h2rxtRJjuW3ZPLL-dereqWNXbZRlO64K4VbeDecMw/viewform?usp=sf_link'"/>
+
     <style>
         /* Inscrição formulario */
-        /*
+        
         #content h3 {
             padding-top: 100px;
             text-align: center;
@@ -22,28 +25,37 @@
             padding-top: 5%;
             text-align: center;
         }
-        */
+        
     </style>
 </head>
 <body>
     <header>
-        <a href="../"><img src="../src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="../fotos">FOTOS</a></li>
-                <li><a href="../regulamento">REGULAMENTO</a></li>
-                <li><a href="../resultados">RESULTADOS</a></li>
-                <li><a href="../inscricao">INSCRIÇÃO</a></li>
+                <li><a href="/fotos/">FOTOS</a></li>
+                <li><a href="/regulamento/">REGULAMENTO</a></li>
+                <li><a href="/resultados/">RESULTADOS</a></li>
+                <li><a href="/inscricao/">INSCRIÇÃO</a></li>
             </ul>
         </nav>
     </header>
     <div id="content">
         <div>
             <h1>Inscrição</h1>
-            <p>Inscrições ainda não estão disponíveis.</p>
             <!--
+            <p>Inscrições ainda não estão disponíveis.</p>
+            -->
+
+            <!-- Pedal de Sant'Ana 2024 -->
             <h3>Redirecionado para um formulário seguro...</h3>
-            <p>Se não for redirecionado clique <a href="https://docs.google.com/forms/d/e//viewform?usp=sf_link">aqui</a>.</p>
+            <p>Se não for redirecionado clique <a href="https://docs.google.com/forms/d/e/1FAIpQLSe3VKKr1h2rxtRJjuW3ZPLL-dereqWNXbZRlO64K4VbeDecMw/viewform?usp=sf_link">aqui</a>.</p>
+
+            <!--
+            <h3>Inscrições Masculina:</h3>
+            <p><a href="https://docs.google.com/forms/d/e//viewform?usp=sf_link" target="_blank">https://forms.gle/</a></p>
+            <h3>Inscrições Feminina:</h3>
+            <p><a href="https://docs.google.com/forms/d/e//viewform?usp=sf_link" target="_blank">https://forms.gle/</a></p>
             -->
         </div>
     </div>
