--- a/resultados/index.html
+++ b/resultados/index.html
@@ -7,20 +7,20 @@
     <meta property="og:site_name" content="Romana MTB">
     <meta name="description" content="Veja os resultados das corridas da Romana MTB.">
     <title>Resultados | Romana MTB</title>
-    <link rel="stylesheet" href="../src/css/reset.css">
-    <link rel="stylesheet" href="../src/css/romana-mtb.css">
-    <link rel="icon" href="../src/img/romana-mtb/romana-mtb-icon.webp">
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
 </head>
 <body>
     <header>
-        <a href="../"><img src="../src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="../fotos">FOTOS</a></li>
-                <li><a href="../regulamento">REGULAMENTO</a></li>
-                <li><a href="../resultados">RESULTADOS</a></li>
-                <li><a href="../inscricao">INSCRIÇÃO</a></li>
-                <!--<li><a href="../inscricao" target="_blank">INSCRIÇÃO</a></li>-->
+                <li><a href="/fotos">FOTOS</a></li>
+                <li><a href="/regulamento">REGULAMENTO</a></li>
+                <li><a href="/resultados">RESULTADOS</a></li>
+                <!--<li><a href="/inscricao">INSCRIÇÃO</a></li>-->
+                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
             </ul>
         </nav>
     </header>
