--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -16,6 +16,15 @@
             height: 75vh;
             width: 100%;
         }
+
+        /* Regulamento imagem */
+        #content #regulamento-img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 100%;
+            max-height: 75vh;
+        }
     </style>
 </head>
 <body>
@@ -33,9 +42,16 @@
     </header>
     <div id="content">
         <div>
+            <!--
             <h1>Regulamento</h1>
             <p>Regulamento ainda não estão disponível.</p>
-            <!--<iframe id="regulamento-pdf" src="https://docs.google.com/gview?url=https://romanamtb.com.br./src/pdf/.pdf&embedded=true"></iframe>-->
+            -->
+            <!--
+            <iframe id="regulamento-pdf" src="https://docs.google.com/gview?url=https://romanamtb.com.br./src/pdf/.pdf&embedded=true"></iframe>
+            -->
+            <!-- Pedal de Sant'Ana -->
+            <img id="regulamento-img" src="/src/img/romana-mtb/regulamento-pedal-de-santana-2024.webp" alt="Regulamento Pedal de Sant'Ana 2024.">
+
         </div>
     </div>
     <footer>
