--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -32,11 +32,11 @@
         <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="/fotos">FOTOS</a></li>
-                <li><a href="/regulamento">REGULAMENTO</a></li>
-                <li><a href="/resultados">RESULTADOS</a></li>
-                <!--<li><a href="/inscricao">INSCRIÇÃO</a></li>-->
-                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
+                <li><a href="/fotos/">FOTOS</a></li>
+                <li><a href="/regulamento/">REGULAMENTO</a></li>
+                <li><a href="/resultados/">RESULTADOS</a></li>
+                <li><a href="/inscricao/">INSCRIÇÃO</a></li>
+                <!--<li><a href="/inscricao/" target="_blank">INSCRIÇÃO</a></li>-->
             </ul>
         </nav>
     </header>
@@ -49,9 +49,9 @@
             <!--
             <iframe id="regulamento-pdf" src="https://docs.google.com/gview?url=https://romanamtb.com.br./src/pdf/.pdf&embedded=true"></iframe>
             -->
-            <!-- Pedal de Sant'Ana -->
-            <img id="regulamento-img" src="/src/img/romana-mtb/regulamento-pedal-de-santana-2024.webp" alt="Regulamento Pedal de Sant'Ana 2024.">
-
+            <!--
+            <img id="regulamento-img" src="/src/img/romana-mtb/.webp" alt="">
+            -->
         </div>
     </div>
     <footer>
