--- a/index.html
+++ b/index.html
@@ -164,21 +164,23 @@
         <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="/fotos">FOTOS</a></li>
-                <li><a href="/regulamento">REGULAMENTO</a></li>
-                <li><a href="/resultados">RESULTADOS</a></li>
-                <!--<li><a href="/inscricao">INSCRIÇÃO</a></li>-->
-                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
+                <li><a href="/fotos/">FOTOS</a></li>
+                <li><a href="/regulamento/">REGULAMENTO</a></li>
+                <li><a href="/resultados/">RESULTADOS</a></li>
+                <li><a href="/inscricao/">INSCRIÇÃO</a></li>
+                <!--<li><a href="/inscricao/" target="_blank">INSCRIÇÃO</a></li>-->
             </ul>
         </nav>
     </header>
     <div id="content">
         <div id="center">
+            <!--
             <div class="text">
                 <h2>28 / 07 / 2024</h2>
                 <h1>PEDAL DE SANT'ANA</h1>
                 <h3>TURISMO</h3>
             </div>
+            -->
         </div>
         <div class="flex">
             <div id="left">
