--- a/resultados/index.html
+++ b/resultados/index.html
@@ -16,11 +16,11 @@
         <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="/fotos">FOTOS</a></li>
-                <li><a href="/regulamento">REGULAMENTO</a></li>
-                <li><a href="/resultados">RESULTADOS</a></li>
-                <!--<li><a href="/inscricao">INSCRIÇÃO</a></li>-->
-                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
+                <li><a href="/fotos/">FOTOS</a></li>
+                <li><a href="/regulamento/">REGULAMENTO</a></li>
+                <li><a href="/resultados/">RESULTADOS</a></li>
+                <li><a href="/inscricao/">INSCRIÇÃO</a></li>
+                <!--<li><a href="/inscricao/" target="_blank">INSCRIÇÃO</a></li>-->
             </ul>
         </nav>
     </header>
