--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         body {
             min-height: 100vh;
             min-width: 100vw;
-            background-image: url("/src/img/romana-mtb/bike-background.webp");
+            /*background-image: url("/src/img/romana-mtb/bike-background.webp");
             background-size: cover;
             background-position: right;
-            background-repeat: no-repeat;
+            background-repeat: no-repeat;*/
         }
         #content .text {
             background-color: #000000bf;
@@ -139,20 +139,13 @@
                 padding: 5px;
                 width: 260px;
             }
-            
-            /* Imagens */
-            #desafio-romana-mtb {
-                height: 185px;
-            }
-            #instituto-abc-logo {
-                height: 150px;
-            }
 
             /* Fonte */
             #content .text h3 {
                 font-size: 15px;
             }
 
+            /* Imagens */
             #partners img {
                 max-height: 150px;
             }
@@ -173,77 +166,50 @@
         </nav>
     </header>
     <div id="content">
+        <!-- Centro cima -->
         <div id="center">
+            <div class="image">
+                <img style="max-width: 90%; max-height: 750px;" src="/src/img/romana-mtb/desafio-romana-xcm.webp" alt="Desafio XCM da Romana MTB.">
+            </div>
             <!--
             <div class="text">
-                <h2>28 / 07 / 2024</h2>
-                <h1>PEDAL DE SANT'ANA</h1>
-                <h3>TURISMO</h3>
+                <h2></h2>
+                <h1></h1>
+                <h3></h3>
             </div>
             -->
         </div>
+        <!-- Centro esquerda/direita 
         <div class="flex">
             <div id="left">
-                <!--
                 <div class="image">
-                    <img id="desafio-romana-mtb" src="/src/img/romana-mtb/desafio-romana-mtb-logo.webp" alt="Logo Desafio Romana MTB.">
-                </div>
-                <div id="desafio-text" class="text">
-                    <h2>04 / 02 / 2024</h2>
-                    <h1>XCO</h1>
-                    <h2>BARROSO / MG</h2>
-                    <h3>EM PROL DO INSTITUTO ABC</h3>
-                </div>
-                <div class="image">
-                    <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="/src/img/partners/instituto-abc.webp" alt="Logo Instituto ABC."></a>
+                    <img style="" src="/src/img/" alt="">
                 </div>
                 <div class="text">
-                    <h2>19 / 05 / 2024</h2>
-                    <h1>PEDAL DE FÁTIMA</h1>
-                    <h3>TURISMO</h3>
+                    <h2></h2>
+                    <h1></h1>
+                    <h3></h3>
                 </div>
-                -->
             </div>
             <div id="right">
-                <!--
                 <div class="text">
-                    <h2>19 / 05 / 2024</h2>
-                    <h1>PEDAL DE FÁTIMA</h1>
-                    <h3>TURISMO</h3>
+                    <h2></h2>
+                    <h1></h1>
+                    <h3></h3>
                 </div>
-                <div class="text">
-                    <h2>18 / 07 / 2024</h2>
-                    <h1>PEDAL DE SANT'ANA</h1>
-                    <h3>TURISMO</h3>
-                </div>
-                -->
             </div>
         </div>
+        -->
+        <!-- Centro baixo 
         <div id="bottom">
             <div id="partners">
                 <h2>PARCEIROS:</h2>
                 <div>
-                    <img src="/src/img/partners/automarax.webp" alt="Logo Automarax.">
-                    <img src="/src/img/partners/bike-podium.webp" alt="Logo Bike Podium.">
-                    <img src="/src/img/partners/bombeiros-voluntarios.webp" alt="Logo Bombeiros Voluntarios.">
-                    <img src="/src/img/partners/conara.webp" alt="Logo Conara.">
-                    <img src="/src/img/partners/csn.webp" alt="Logo CSN.">
-                    <img src="/src/img/partners/del-rey-bike.webp" alt="Logo Del Rey Bike.">
-                    <img src="/src/img/partners/domiciano-bike.webp" alt="Logo Domiciano Bike.">
-                    <img src="/src/img/partners/ebex.webp" alt="Logo Ebex.">
-                    <img src="/src/img/partners/fluir-bike.webp" alt="Logo Fluir Bike.">
-                    <img src="/src/img/partners/kowards-moto-club.webp" alt="Logo Koward's Moto Club.">
-                    <img src="/src/img/partners/liberdade-fm.webp" alt="Logo Liberdade FM.">
-                    <img src="/src/img/partners/mlj.webp" alt="Logo MLJ.">
-                    <img src="/src/img/partners/multiplanar.webp" alt="Logo Multiplanar.">
-                    <img src="/src/img/partners/racing-bike.webp" alt="Logo Racing Bike.">
-                    <img src="/src/img/partners/sicoob-mais.webp" alt="Logo Sicoob Mais.">
-                    <img src="/src/img/partners/sigo.webp" alt="Logo SIGO.">
-                    <img src="/src/img/partners/tec-ar.webp" alt="Logo Tec Ar.">
-                    <img src="/src/img/partners/vidromix.webp" alt="Logo Vidromix.">
+                    <img src="/src/img/partners/" alt="">
                 </div>
             </div>
         </div>
+        -->
     </div>
     <footer>
         <p>© Romana MTB - Todos os direitos reservados.</p>
