--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         /* Background */
         body {
             min-height: 100vh;
-            /*background-image: url("/src/img/romana-mtb/bike-background.webp");
+            background-image: url("/src/img/romana-mtb/bike-background.webp");
             background-size: cover;
             background-position: right;
-            background-repeat: no-repeat;*/
+            background-repeat: no-repeat;
         }
         #content .text {
             background-color: #000000bf;
@@ -167,16 +167,11 @@
     <div id="content">
         <!-- Centro cima -->
         <div id="center">
-            <div class="image">
-                <img style="max-width: 90%; max-height: 750px;" src="/src/img/romana-mtb/desafio-romana-xcm.webp" alt="Desafio XCM da Romana MTB.">
-            </div>
-            <!--
             <div class="text">
                 <h2></h2>
-                <h1></h1>
-                <h3></h3>
+                <h1>Sem eventos</h1>
+                <h3>Nenhum evento agendado por enquanto.</h3>
             </div>
-            -->
         </div>
         <!-- Centro esquerda/direita 
         <div class="flex">
