--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <ul>
                 <li><a href="/fotos/">FOTOS</a></li>
                 <li><a href="/regulamento/">REGULAMENTO</a></li>
-                <li><a href="/resultados/">RESULTADOS</a></li>
+                <!--<li><a href="/resultados/">RESULTADOS</a></li>-->
                 <li><a href="/inscricao/">INSCRIÇÃO</a></li>
                 <!--<li><a href="/inscricao/" target="_blank">INSCRIÇÃO</a></li>-->
             </ul>
