--- a/404.html
+++ b/404.html
@@ -7,23 +7,9 @@
     <title>Erro 404 | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="stylesheet" href="/src/css/404.css">
     <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
-    <style>
-        #content div {
-            top: 250px;
-            text-align: center;
-        }
-        #content h1 {
-            color: #fff;
-            font-weight: normal;
-            font-size: 80px;
-            margin: 0;
-        }
-        #content p {
-            font-weight: normal;
-            font-size: 30px;
-        }
-    </style>
 </head>
 <body>
     <header>
