--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -9,23 +9,11 @@
     <title>Inscrição | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
     <!-- 
     <meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e//viewform?usp=sf_link'"/>
     -->
-    <style>
-        /* Inscrição formulario */
-        /*
-        #content h3 {
-            padding-top: 100px;
-            text-align: center;
-        }
-        #content p {
-            padding-top: 5%;
-            text-align: center;
-        }
-        */
-    </style>
 </head>
 <body>
     <header>
