--- a/fotos/index.html
+++ b/fotos/index.html
@@ -9,38 +9,8 @@
     <title>Fotos | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
-    <style>
-        /* Imagens */
-        #content div {
-            padding-top: 10px;
-            text-align: center;
-        }
-        #content div img {
-            padding: 5px;
-            margin: 0px;
-            max-height: 250px;
-            max-width: 85vw;
-        }
-
-
-        /* Tela <= 1100px */
-        @media (max-width: 1100px) {
-            /* Imagens */
-            #content div img {
-                max-height: 200px;
-            }
-        }
-
-        
-        /* Tela <= 530px */
-        @media (max-width: 530px) {
-            /* Imagens */
-            #content div img {
-                max-height: 150px;
-            }
-        }
-    </style>
 </head>
 <body>
     <header>
