--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -9,23 +9,8 @@
     <title>Regulamento | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
-    <style>
-        /* Regulamento PDF */
-        #regulamento-pdf {
-            height: 75vh;
-            width: 100%;
-        }
-
-        /* Regulamento imagem */
-        #content #regulamento-img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            max-width: 100%;
-            max-height: 75vh;
-        }
-    </style>
 </head>
 <body>
     <header>
