--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html><html lang="pt-BR"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="robots" content="index, nofollow"><meta property="og:site_name" content="Romana MTB"><meta name="description" content="Faça sua inscrição para o Pedal de Fátima 2024."><title>Inscrição | Romana MTB</title><link rel="stylesheet" href="/src/css/reset.css"><link rel="stylesheet" href="/src/css/romana-mtb.css"><link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp"><style>/* Inscrição formulario */
-        /*
-        #content h3 {
-            padding-top: 100px;
-            text-align: center;
-        }
-        #content p {
-            padding-top: 5%;
-            text-align: center;
-        }
-        */</style></head><body><header><a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a><nav><ul><li><a href="/fotos/">FOTOS</a></li><li><a href="/regulamento/">REGULAMENTO</a></li><li><a href="/inscricao/">INSCRIÇÃO</a></li></ul></nav></header><div id="content"><div><h1>Inscrição</h1><p>Inscrições ainda não estão disponíveis.</p></div></div><footer><p>© Romana MTB - Todos os direitos reservados.</p></footer></body></html>
+<!DOCTYPE html><html lang="pt-BR"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="robots" content="index, nofollow"><meta property="og:site_name" content="Romana MTB"><meta name="description" content="Faça sua inscrição para o Pedal de Fátima 2024."><title>Inscrição | Romana MTB</title><link rel="stylesheet" href="/src/css/reset.css"><link rel="stylesheet" href="/src/css/romana-mtb.css"><link rel="stylesheet" href="style.css"><link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp"></head><body><header><a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a><nav><ul><li><a href="/fotos/">FOTOS</a></li><li><a href="/regulamento/">REGULAMENTO</a></li><li><a href="/inscricao/">INSCRIÇÃO</a></li></ul></nav></header><div id="content"><div><h1>Inscrição</h1><p>Inscrições ainda não estão disponíveis.</p></div></div><footer><p>© Romana MTB - Todos os direitos reservados.</p></footer></body></html>
