deploy: f18e2f625fba79d5df86ebf6789bcb87ad2ccdf6

--- a/resultados/index.html
+++ b/resultados/index.html
@@ -1,1 +1,37 @@
-<!DOCTYPE html><html lang="pt-BR"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="robots" content="index, follow"><meta property="og:site_name" content="Romana MTB"><meta name="description" content="Veja os resultados das corridas da Romana MTB."><title>Resultados | Romana MTB</title><link rel="stylesheet" href="/src/css/reset.css"><link rel="stylesheet" href="/src/css/romana-mtb.css"><link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp"></head><body><header><a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a><nav><ul><li><a href="/fotos/">FOTOS</a></li><li><a href="/regulamento/">REGULAMENTO</a></li><li><a href="/resultados/">RESULTADOS</a></li><li><a href="/inscricao/">INSCRIÇÃO</a></li></ul></nav></header><div id="content"><div><h1>Resultados</h1><p>Sem resultados no momento.</p></div></div><footer><p>© Romana MTB - Todos os direitos reservados.</p></footer></body></html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
+    <meta property="og:site_name" content="Romana MTB">
+    <meta name="description" content="Veja os resultados das corridas da Romana MTB.">
+    <title>Resultados | Romana MTB</title>
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
+</head>
+<body>
+    <header>
+        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <nav>
+            <ul>
+                <li><a href="/fotos/">FOTOS</a></li>
+                <li><a href="/regulamento/">REGULAMENTO</a></li>
+                <li><a href="/resultados/">RESULTADOS</a></li>
+                <li><a href="/inscricao/">INSCRIÇÃO</a></li>
+                <!--<li><a href="/inscricao/" target="_blank">INSCRIÇÃO</a></li>-->
+            </ul>
+        </nav>
+    </header>
+    <div id="content">
+        <div>
+            <h1>Resultados</h1>
+            <p>Sem resultados no momento.</p>
+        </div>
+    </div>
+    <footer>
+        <p>© Romana MTB - Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
