--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-<!DOCTYPE html><html lang="pt-BR"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="robots" content="index, follow"><meta property="og:site_name" content="Romana MTB"><meta name="description" content="Maior organizador de eventos de bike da região."><title>Romana MTB</title><link rel="stylesheet" href="/src/css/reset.css"><link rel="stylesheet" href="/src/css/romana-mtb.css"><link rel="stylesheet" href="style.css"><link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp"></head><body><header><a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a><nav><ul><li><a href="/fotos/">FOTOS</a></li><li><a href="/regulamento/">REGULAMENTO</a></li><li><a href="/inscricao/">INSCRIÇÃO</a></li></ul></nav></header><div id="content"><div id="center"><div class="text"><h2></h2><h1>Sem eventos</h1><h3>Nenhum evento agendado por enquanto.</h3></div></div></div><footer><p>© Romana MTB - Todos os direitos reservados.</p></footer></body></html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
+    <meta property="og:site_name" content="Romana MTB">
+    <meta name="description" content="Maior organizador de eventos de bike da região.">
+    <title>Romana MTB</title>
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/romana-mtb.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
+</head>
+<body>
+    <header>
+        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <nav>
+            <ul>
+                <li><a href="/fotos/">FOTOS</a></li>
+                <li><a href="/regulamento/">REGULAMENTO</a></li>
+                <!--<li><a href="/resultados/">RESULTADOS</a></li>-->
+                <li><a href="/inscricao/">INSCRIÇÃO</a></li>
+                <!--<li><a href="/inscricao/" target="_blank">INSCRIÇÃO</a></li>-->
+            </ul>
+        </nav>
+    </header>
+    <div id="content">
+        <!-- Centro cima -->
+        <div id="center">
+            <div class="text">
+                <h2></h2>
+                <h1>Sem eventos</h1>
+                <h3>Nenhum evento agendado por enquanto.</h3>
+            </div>
+        </div>
+        <!-- Centro esquerda/direita 
+        <div class="flex">
+            <div id="left">
+                <div class="image">
+                    <img style="" src="/src/img/" alt="">
+                </div>
+                <div class="text">
+                    <h2></h2>
+                    <h1></h1>
+                    <h3></h3>
+                </div>
+            </div>
+            <div id="right">
+                <div class="text">
+                    <h2></h2>
+                    <h1></h1>
+                    <h3></h3>
+                </div>
+            </div>
+        </div>
+        -->
+        <!-- Centro baixo 
+        <div id="bottom">
+            <div id="partners">
+                <h2>PARCEIROS:</h2>
+                <div>
+                    <img src="/src/img/partners/" alt="">
+                </div>
+            </div>
+        </div>
+        -->
+    </div>
+    <footer>
+        <p>© Romana MTB - Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
