deploy: dcd6c6b62bd72dff8bcb553de133214333e388a2

--- a/fotos/index.html
+++ b/fotos/index.html
@@ -1,44 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="index, follow">
-    <meta property="og:site_name" content="Romana MTB">
-    <meta name="description" content="Fotos dos eventos da Romana MTB.">
-    <title>Fotos | Romana MTB</title>
-    <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/romana-mtb.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
-</head>
-<body>
-    <header>
-        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
-        <nav>
-            <ul>
-                <li><a href="/fotos/">FOTOS</a></li>
-                <li><a href="/regulamento/">REGULAMENTO</a></li>
-                <!--<li><a href="/resultados/">RESULTADOS</a></li>-->
-                <li><a href="/inscricao/">INSCRIÇÃO</a></li>
-                <!--<li><a href="/inscricao/" target="_blank">INSCRIÇÃO</a></li>-->
-            </ul>
-        </nav>
-    </header>
-    <div id="content">
-        <h1>Fotos</h1>
-        <div id="mtb-fest-2023">
-            <h2>MTB FEST 2023</h2>
-        </div>
-        <div id="apae-2019">
-            <h2>TRILHÃO APAE 2019</h2>
-        </div>
-    </div>
-    <footer>
-        <p>© Romana MTB - Todos os direitos reservados.</p>
-    </footer>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
+<!DOCTYPE html><html lang="pt-BR"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="robots" content="index, follow"><meta property="og:site_name" content="Romana MTB"><meta name="description" content="Fotos dos eventos da Romana MTB."><title>Fotos | Romana MTB</title><link rel="stylesheet" href="/src/css/reset.css"><link rel="stylesheet" href="/src/css/romana-mtb.css"><link rel="stylesheet" href="style.css"><link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp"></head><body><header><a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a><nav><ul><li><a href="/fotos/">FOTOS</a></li><li><a href="/regulamento/">REGULAMENTO</a></li><li><a href="/inscricao/">INSCRIÇÃO</a></li></ul></nav></header><div id="content"><h1>Fotos</h1><div id="mtb-fest-2023"><h2>MTB FEST 2023</h2></div><div id="apae-2019"><h2>TRILHÃO APAE 2019</h2></div></div><footer><p>© Romana MTB - Todos os direitos reservados.</p></footer><script>document.addEventListener("DOMContentLoaded", function() {
             var photosContainer = document.getElementById('apae-2019');
             for (let i = 0; i <= 62; i++) {
                 // Cria um elemento de imagem
@@ -57,7 +17,4 @@
                 img.alt = "Foto MTB Fest 2023.";
                 photosContainer.appendChild(img);
             }
-        });
-      </script>
-</body>
-</html>
+        });</script></body></html>
