--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -1,52 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="index, nofollow">
-    <meta property="og:site_name" content="Romana MTB">
-    <meta name="description" content="Faça sua inscrição para o Pedal de Fátima 2024.">
-    <title>Inscrição | Romana MTB</title>
-    <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/romana-mtb.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
-    <!-- 
-    <meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e//viewform?usp=sf_link'"/>
-    -->
-</head>
-<body>
-    <header>
-        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
-        <nav>
-            <ul>
-                <li><a href="/fotos/">FOTOS</a></li>
-                <li><a href="/regulamento/">REGULAMENTO</a></li>
-                <!--<li><a href="/resultados/">RESULTADOS</a></li>-->
-                <li><a href="/inscricao/">INSCRIÇÃO</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div id="content">
-        <div>
-            <h1>Inscrição</h1>
-            
-            <p>Inscrições ainda não estão disponíveis.</p>
-            
-            <!-- 
-            <h3>Redirecionado para um formulário seguro...</h3>
-            <p>Se não for redirecionado clique <a href="https://docs.google.com/forms/d/e//viewform?usp=sf_link">aqui</a>.</p>
-            -->
-            <!--
-            <h3>Inscrições Masculina:</h3>
-            <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXawlWbgR4gRmNH-c73ZlIWIaFVjkJMf-CkLqZtLBDYiP9pA/viewform?usp=sf_link" target="_blank">https://forms.gle/t8Bs25SMyJ27hNsP7</a></p>
-            <h3>Inscrições Feminina:</h3>
-            <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfisBj0TbB2_OPARIaWB0kJGuWR5AE8jKPyOkhtRXxztMop7w/viewform?usp=sf_link" target="_blank">https://forms.gle/2FxyM3F2K7nxPQQL7</a></p>
-            -->
-        </div>
-    </div>
-    <footer>
-        <p>© Romana MTB - Todos os direitos reservados.</p>
-    </footer>
-</body>
-</html>
+<!DOCTYPE html><html lang="pt-BR"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="robots" content="index, nofollow"><meta property="og:site_name" content="Romana MTB"><meta name="description" content="Faça sua inscrição para o Pedal de Fátima 2024."><title>Inscrição | Romana MTB</title><link rel="stylesheet" href="/src/css/reset.css"><link rel="stylesheet" href="/src/css/romana-mtb.css"><link rel="stylesheet" href="style.css"><link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp"></head><body><header><a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a><nav><ul><li><a href="/fotos/">FOTOS</a></li><li><a href="/regulamento/">REGULAMENTO</a></li><li><a href="/inscricao/">INSCRIÇÃO</a></li></ul></nav></header><div id="content"><div><h1>Inscrição</h1><p>Inscrições ainda não estão disponíveis.</p></div></div><footer><p>© Romana MTB - Todos os direitos reservados.</p></footer></body></html>
