--- a/fotos/index.html
+++ b/fotos/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -37,27 +38,5 @@
     <footer>
         <p>© Romana MTB - Todos os direitos reservados.</p>
     </footer>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            var photosContainer = document.getElementById('apae-2019');
-            for (let i = 0; i <= 62; i++) {
-                // Cria um elemento de imagem
-                var img = document.createElement('img');
-                // Src e Alt da imagem
-                img.src = "/src/img/photos/apae-2019/img-" + i.toString().padStart(3, "0") + ".webp";
-                img.alt = "Foto Trilhão APAE 2019.";
-                // Adiciona a imagem ao div
-                photosContainer.appendChild(img);
-            }
-            
-            var photosContainer = document.getElementById('mtb-fest-2023');
-            for (let i = 0; i <= 81; i++) {
-                var img = document.createElement('img');
-                img.src = "/src/img/photos/mtb-fest-2023/img-" + i.toString().padStart(3, "0") + ".webp";
-                img.alt = "Foto MTB Fest 2023.";
-                photosContainer.appendChild(img);
-            }
-        });
-      </script>
 </body>
 </html>
